# heyvox

./: .gitignore  CLAUDE.md  LICENSE  README.md  com.heyvox.listener.plist  com.vox.listener.plist  product-concept.md  pyproject.toml
.github/workflows/: ci.yml  install-test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-audio-input-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-cli-tts-output/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-mcp-server/: 04-01-SUMMARY.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-hud-overlay/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-decomposition/: 06-00-PLAN.md  06-00-SUMMARY.md  06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md
.planning/phases/07-herald-python-port/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-HUMAN-UAT.md  07-VERIFICATION.md
.planning/phases/08-ipc-consolidation/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-RESEARCH.md  08-VALIDATION.md  08-VERIFICATION.md
.planning/phases/09-test-suite/: 09-01-SUMMARY.md  09-02-SUMMARY.md
.planning/phases/10-test-stability/: 10-01-SUMMARY.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md
.planning/phases/11-tech-debt-cleanup/: 11-01-SUMMARY.md  11-02-SUMMARY.md  11-VERIFICATION.md
.planning/phases/12-paste-injection-reliability/: 12-01-SUMMARY.md  12-02-SUMMARY.md  12-03-SUMMARY.md  12-HUMAN-UAT.md  12-VERIFICATION.md
.planning/phases/13-audio-reliability/: 13-01-SUMMARY.md  13-02-SUMMARY.md  13-03-SUMMARY.md  13-04-SUMMARY.md  13-CONTEXT.md  13-VERIFICATION.md
.planning/phases/15-paste-target-lock/: 15-01-SUMMARY.md  15-02-SUMMARY.md  15-03-SUMMARY.md  15-04-SUMMARY.md  15-05-SUMMARY.md  15-06-SUMMARY.md  15-07-SUMMARY.md  15-VERIFICATION.md
.planning/quick/260413-j7m-add-blackhole-based-integration-tests-fo/: 260413-j7m-PLAN.md  260413-j7m-SUMMARY.md
.planning/research/: ARCHITECTURE.md  CLI-VS-MCP-VOICE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
chrome-extension/: README.md  background.js  content.js  manifest.json
cues/: listening.aiff  paused.aiff  sending.aiff
docs/: CNAME  index.html  install.sh  privacy.html  uninstall.sh
docs/chrome-webstore/: listing.md
heyvox/: __main__.py  app_context.py  cli.py  config.py  constants.py  device_manager.py  history.py  main.py  recording.py  text_processing.py
heyvox/adapters/: base.py  conductor.py  generic.py  last_agent.py
heyvox/audio/: cues.py  echo.py  media.py  mic.py  negative_collector.py  normalize.py  output.py  profile.py  stt.py  training_collector.py  tts.py  wakeword.py
heyvox/chrome/: __init__.py  bridge.py
heyvox/cues/: ok.aiff
heyvox/herald/: __init__.py  cli.py  coreaudio.py  orchestrator.py  worker.py
heyvox/herald/daemon/: kokoro-daemon.py  qwen-daemon.py  watcher.py
heyvox/herald/hooks/: on-ambient.sh  on-notify.sh  on-response.sh  on-session-end.sh  on-session-start.sh
heyvox/herald/lib/: config.sh  media.sh  orchestrator.sh  speak.sh  worker.sh
heyvox/herald/modes/: ambient.sh  cleanup.sh  greeting.sh  notify.sh  recap.sh
heyvox/hud/: ipc.py  overlay.py  process.py
heyvox/hush/: __init__.py
heyvox/hush/extension/: background.js  content.js  manifest.json  popup.html  popup.js
heyvox/hush/host/: com.hush.bridge.json  hush_host.py
heyvox/hush/integration/: apply.sh  herald-media.patch  (+3 more)
heyvox/input/: conductor.py  injection.py  ptt.py  target.py  toast.py
heyvox/ipc/: __init__.py  state.py
heyvox/mcp/: server.py
heyvox/setup/: __init__.py  hooks.py  launchd.py  permissions.py  wizard.py
scripts/: install.sh  package_chrome_extension.sh  run-tests.sh  uninstall.sh
scripts/dev/: reset-install-test.sh
tests/: conftest.py  test_adapters.py  test_app_context.py  test_app_fast_paste.py  test_calibrate_cmd.py  test_chrome_bridge.py  test_conductor_adapter.py  test_config.py  test_cues.py  test_defect_guards.py  test_device_manager.py  test_e2e.py  test_echo_journal.py  test_echo_suppression.py  test_flag_coordination.py  test_herald_cli.py  test_herald_orchestrator.py  test_herald_worker.py  test_hud_ipc.py  test_injection.py  test_injection_enter.py  test_injection_sanitize.py  test_integration_audio.py  test_ipc_state.py  test_log_health_paste.py  test_media.py  test_mic_profile.py  test_multiapp_injection.py  test_normalize.py  test_queue_gc.py  test_recording_state.py  test_resolve_lock.py  test_stale_flags.py  test_stress.py  test_target_lock.py  test_target_restore.py  test_toast.py  test_tts_state.py  test_verify_paste.py  test_wake_word_strip.py  (+1 more)
tools/: collect_personal_features.py  featurise_clips.py  retrain_heyvox_local_smoke.py  retrain_heyvox_smoke.py  retrain_heyvox_v7.py  wakeword_eval.py  wakeword_fp_audit.py
training/: .gitignore  README.md  colab_hey_vox.py  download_negatives.py  generate_synthetic.py  hey_vox_colab.ipynb  hey_vox_livekit.yaml  record_negatives.py  record_samples.py  test_model.py  train_livekit.py  train_model.py
vox/: __main__.py  cli.py  config.py  constants.py  main.py
vox/adapters/: generic.py  last_agent.py
vox/audio/: cues.py  mic.py  stt.py  tts.py  wakeword.py
vox/hud/: ipc.py  overlay.py
vox/input/: injection.py  ptt.py
vox/mcp/: server.py
vox/setup/: launchd.py  permissions.py  wizard.py
(+3 files in other folders)
