[project]
name = "heyvox"
version = "0.1.0"
description = "macOS voice layer for AI coding agents — wake word, local STT, local TTS, HUD"
license = {text = "MIT"}
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "Franz Felberer", email = "franz@felberer.at" },
]
keywords = [
    "voice", "speech", "tts", "stt", "wake-word", "mcp",
    "ai-coding", "macos", "local", "privacy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "openwakeword>=0.6.0",
    "pyaudio>=0.2.14",
    "numpy>=1.24.0",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "platformdirs>=4.0",
    "sherpa-onnx>=1.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "mcp>=1.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://heyvox.dev"
Repository = "https://github.com/heyvox-dev/heyvox"
Issues = "https://github.com/heyvox-dev/heyvox/issues"

[project.optional-dependencies]
apple-silicon = [
    "mlx-whisper>=0.1.0",
]
tts = [
    "kokoro>=0.3.0",
    "sounddevice>=0.4.0",
    "huggingface_hub>=0.20.0",
]
aec = [
    "livekit>=1.0.0",
]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
heyvox = "heyvox.cli:main"

[tool.setuptools.packages.find]
include = ["heyvox*"]

[tool.setuptools.package-data]
heyvox = ["cues/*.wav", "cues/*.mp3", "cues/*.aiff"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
