[project]
name = "heyvox"
version = "1.0.0"
description = "macOS voice layer for AI coding agents — wake word, STT, TTS, HUD, media control"
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "Franz Felberer", email = "franz@felberer.at" },
]
keywords = [
    "voice", "speech", "tts", "stt", "wake-word", "mcp",
    "ai-coding", "macos", "local", "privacy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "openwakeword>=0.6.0",
    "pyaudio>=0.2.14",
    "numpy>=1.24.0",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "platformdirs>=4.0",
    "sherpa-onnx>=1.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "mcp>=1.0",
    "psutil>=5.9",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://heyvox.dev"
Documentation = "https://github.com/heyvox-dev/heyvox#readme"
Repository = "https://github.com/heyvox-dev/heyvox"
Issues = "https://github.com/heyvox-dev/heyvox/issues"
Changelog = "https://github.com/heyvox-dev/heyvox/releases"

[project.optional-dependencies]
apple-silicon = [
    "mlx-whisper>=0.1.0",
]
tts = [
    "kokoro>=0.3.0",
    "sounddevice>=0.4.0",
    "huggingface_hub>=0.20.0",
]
aec = [
    "livekit>=1.0.0",
]
chrome = [
    "websockets>=13.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-subprocess",
    "ruff",
]

[project.scripts]
heyvox = "heyvox.cli:main"
herald = "heyvox.herald.cli:main"
heyvox-chrome-bridge = "heyvox.chrome.bridge:run_bridge"

[tool.setuptools.packages.find]
include = ["heyvox*"]

[tool.setuptools.package-data]
heyvox = [
    "cues/*.wav", "cues/*.mp3", "cues/*.aiff",
    # Wake word models (custom .onnx, e.g. hey_vox)
    "models/*.onnx",
    # Herald — TTS orchestration (bash scripts + Python daemon)
    "herald/bin/*",
    "herald/lib/*.sh",
    "herald/daemon/*.py",
    "herald/hooks/*.sh",
    "herald/modes/*.sh",
    # Hush — browser media control (Chrome extension + native host)
    "hush/extension/*.js",
    "hush/extension/*.html",
    "hush/extension/*.json",
    "hush/extension/icons/*.png",
    "hush/host/*.py",
    "hush/host/*.json",
    "hush/scripts/*.sh",
    "hush/integration/*.sh",
    "hush/integration/*.py",
    "hush/integration/*.patch",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "strict"
# Integration tests require BlackHole + running heyvox — excluded by default.
# Run them explicitly: pytest -m integration
addopts = "-m 'not integration'"
markers = [
    "integration: requires BlackHole virtual audio and a running heyvox instance",
    "requires_audio: marks tests that need physical audio input hardware (skipped in CI)",
]

[tool.ruff.lint.extend-per-file-ignores]
# Late imports of constants that document neighboring state — moving them
# would obscure the rationale, and the import target is internal anyway.
"heyvox/audio/media.py" = ["E402"]
"heyvox/audio/tts.py" = ["E402"]
"heyvox/hud/overlay.py" = ["E402"]
"heyvox/input/injection.py" = ["E402"]
# CLI / Colab style scripts: imports follow conditional pip installs and
# `if __name__ == "__main__"` guards, and some imports serve as availability probes.
"tools/**" = ["E402"]
"training/**" = ["E402", "F401"]
